Fix styling and layout issues in Header and Footer components

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -4,7 +4,7 @@
 .footer {
   background-color: #4cbab2;
   color: var(--wpe--color--white);
-  padding: 1rem;
+  padding: 2rem 1rem;
 
   a {
     color: var(--wpe--color--white);
